--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
     "dist"
   ],
   "keywords": [
-    "swap",
     "array",
     "javascript",
-    "reorder",
-    "order",
-    "index"
+    "portal"
   ],
   "author": "Michael J. Zoidl <npm@michaelzoidl.com> (https://entwicklerstube.com)",
   "license": "MIT",
@@ -38,6 +35,7 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
+    "lodash.clone": "^4.3.2",
     "lodash.findindex": "^4.3.0"
   }
 }
